--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,7 +4,7 @@ steps:
       [
         "build",
         "-t",
-        "us-central1-docker.pkg.dev/<your_project_id>/gke-repo/quickstart-image",
+        "us-central1-docker.pkg.dev/kingdom-450018/gke-repo/quickstart-image",
         "./app1",
       ]
     id: "Build Docker Image"
@@ -16,7 +16,7 @@ steps:
     args:
       [
         "push",
-        "us-central1-docker.pkg.dev/<your_project_id>/gke-repo/quickstart-image",
+        "us-central1-docker.pkg.dev/kingdom-450018/gke-repo/quickstart-image",
       ]
     id: "Push Docker Image"
 
@@ -25,7 +25,7 @@ steps:
       [
         "build",
         "-t",
-        "us-central1-docker.pkg.dev/<your_project_id>/gke-repo/flask-image",
+        "us-central1-docker.pkg.dev/kingdom-450018/gke-repo/flask-image",
         "./app2",
       ]
     id: "Build Docker Image2"
@@ -35,10 +35,7 @@ steps:
 
   - name: "gcr.io/cloud-builders/docker"
     args:
-      [
-        "push",
-        "us-central1-docker.pkg.dev/<your_project_id>/gke-repo/flask-image",
-      ]
+      ["push", "us-central1-docker.pkg.dev/kingdom-450018/gke-repo/flask-image"]
     id: "Push Docker Image2"
 
   - name: "google/cloud-sdk:latest"
@@ -49,7 +46,8 @@ steps:
       - |
         gcloud deploy apply --file deploy/pipeline.yaml --region=us-central1
         gcloud deploy apply --file deploy/dev.yaml --region=us-central1
-        gcloud deploy releases create 'app-release-${SHORT_SHA}' --delivery-pipeline=gke-cicd-pipeline-emi --region=us-central1 --skaffold-file=skaffold.yaml
-
+        gcloud deploy apply --file deploy/prod.yaml --region=us-central1
+        gcloud deploy releases create 'app-release-${SHORT_SHA}' --delivery-pipeline=gke-cicd-pipeline-kingdom --region=us-central1 --from-k8s-manifest=./kubernetes/app1.yaml
+        gcloud deploy releases create 'app-release-${SHORT_SHA}' --delivery-pipeline=gke-cicd-pipeline-kingdom --region=us-central1 --from-k8s-manifest=./kubernetes/app2.yaml
 options:
   logging: CLOUD_LOGGING_ONLY
